# didactic-engine

./: .gitattributes  .gitignore  ABC_IMPLEMENTATION_SUMMARY.md  AGENT_INSTRUCTIONS.md  BENCHMARK_ANALYSIS.md  CLAUDE.md  DOC_INVENTORY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  NEW_EXAMPLES_SUMMARY.md  OPTIMIZATION_RESILIENCE_REVIEW.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  STATUS.md  STYLE_GUIDE.md  TASKS.md  WORKFLOW_OPTIMIZATIONS.md  benchmark_pipeline.py  pyproject.toml  requirements.txt  test_improvements.py
.github/: copilot-instructions.md
.github/agents/: codebase-doc-gen.agent.md
data/as_above_60s_nowrite_chunks/analysis/as_above_60s_nowrite_chunks/: combined.json
data/as_above_60s_nowrite_chunks/datasets/as_above_60s_nowrite_chunks/: bars.parquet  beats.parquet  events.parquet
data/as_above_60s_nowrite_chunks/reports/as_above_60s_nowrite_chunks/: bass.abc  drums.abc  midi_markdown.md  other.abc  vocals.abc
data/as_above_run/analysis/as_above_so_below_1_0_0/: combined.json
data/as_above_run/datasets/as_above_so_below_1_0_0/: bars.parquet  beats.parquet  events.parquet
data/as_above_run/reports/as_above_so_below_1_0_0/: bass.abc  drums.abc  midi_markdown.md  other.abc  vocals.abc
data/click_chunk_test/analysis/click_track/: combined.json
data/click_chunk_test/datasets/click_track/: bars.parquet  events.parquet
data/click_chunk_test/reports/click_track/: bass.abc  drums.abc  midi_markdown.md  other.abc  vocals.abc
data/sample_run/analysis/sample/: combined.json
data/sample_run/datasets/sample/: bars.parquet  events.parquet
data/sample_run/reports/sample/: bass.abc  drums.abc  midi_markdown.md  other.abc  vocals.abc
data/sample_run2/analysis/sample2/: combined.json
docs/: 00_README_DEV.md  01_ARCHITECTURE.md  02_KEY_FLOWS.md  03_DEBUGGING.md  04_CONTRIBUTING.md  05_GLOSSARY.md  06_API_REFERENCE.md  07_DESIGN_PATTERNS.md  07_DESIGN_PATTERNS_AND_DECISIONS.md  08_ANTI_PATTERNS.md  09_DEPENDENCY_MAPS.md  10_RESILIENCE.md  abc_dataset_generation.md  environment.md
docs/adr/: 0001-immutable-config.md  0002-graceful-degradation.md  0003-cli-first-external-tools.md  0004-bar-chunking-performance-tunability.md  0005-results-as-dict.md  0006-consolidate-chunking.md  README.md
docs/knowledge_graph/: README.md
examples/: MARIMO_QUICKSTART.md  MARIMO_README.md  QUICK_REFERENCE.md  README.md  __init__.py  abc_dataset_example.py  batch_processing_example.py  example_usage.py  quickstart_demo.py  tutorial.ipynb  tutorial_marimo.py  visualization_plotly.py  workflow_batch_viz.py
music_etl/: AGENT_INSTRUCTIONS.md  README.md  pyproject.toml
music_etl/data/input/: .gitkeep
music_etl/scripts/: run_pipeline.py
music_etl/src/music_etl/: __init__.py  align.py  audio_preprocess.py  bar_chunker.py  config.py  datasets.py  essentia_features.py  export_abc.py  export_md.py  midi_features.py  pipeline.py  separate.py  transcribe.py  utils_flatten.py  wav_features.py
music_etl/tests/: __init__.py  test_improvements.py
src/didactic_engine/: __init__.py  align.py  analysis.py  bar_chunker.py  batch.py  chunking_performance.py  cli.py  config.py  essentia_features.py  export_abc.py  export_md.py  features.py  ingestion.py  metadata_export.py  midi_parser.py  midi_quantizer.py  onnx_inference.py  pipeline.py  preprocessing.py  resilience.py  segmentation.py  separation.py  stem_selector.py  subprocess_utils.py  transcription.py  utils_flatten.py
tests/: conftest.py  test_edge_cases.py  test_examples.py  test_performance.py  test_pipeline.py  test_resilience.py
tools/knowledge_graph/: build_knowledge_graph.py  render_dependency_maps.py
