[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "didactic-engine"
version = "0.1.0"
description = "Audio processing pipeline for stem separation, analysis, MIDI transcription, and feature extraction"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yakuza Dave", email = "yakuzadave@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pretty-midi>=0.2.10",
    "music21>=9.1.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
essentia = [
    "essentia>=2.1b5",
]
ml = [
    "demucs>=4.0.0",
    "basic-pitch>=0.2.0; python_version < '3.12'",
    "onnxruntime>=1.14.0",
    "torchcodec>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "marimo>=0.18.0",
]
all = [
    "demucs>=4.0.0",
    "basic-pitch>=0.2.0; python_version < '3.12'",
    "onnxruntime>=1.14.0",
    "torchcodec>=0.1.0",
    "essentia>=2.1b5",
]

[project.scripts]
didactic-engine = "didactic_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
