[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-etl"
version = "0.1.0"
description = "Audio processing pipeline for stem separation, analysis, MIDI transcription, and feature extraction with bar-level segmentation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Music ETL Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pretty-midi>=0.2.10",
    "music21>=9.1.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
essentia = [
    "essentia>=2.1b6.dev90",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
